# personal_finance_tracker

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml  docker.yml  rust.yml
backend/: Cargo.toml  rust.dockerfile
backend/src/: main.rs  state.rs
backend/src/controller/: transaction.rs
backend/src/db/: mod.rs  transactions.rs  users.rs
backend/src/models/: tracker.rs  transaction.rs
frontend/finance-tracker/: next.dockerfile  package-lock.json  package.json
frontend/finance-tracker/src/app/: layout.tsx  page.tsx
frontend/finance-tracker/src/app/about/: page.tsx
frontend/finance-tracker/src/app/dashboard/: page.tsx
src/: main.rs  tracker.rs  transaction.rs  ui.rs
src/controller/: transaction.rs
src/db/: categories.rs  connection.rs
src/models/: mod.rs  tracker.rs  transaction.rs
src/services/: transaction.rs
