[package]
name = "personal_finance_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.38"
dotenv = "0.15.0"
openssl = "0.10.68"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-native-tls", "postgres" ] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
